# learn_metal

./: .gitignore  CMakeLists.txt
src/00-window/: main.cpp
src/01-hello-triangle/: main.cpp  shaders.metal  vertex.hpp
src/02-hello-3d/: main.cpp  shader-defs.hpp  shaders.metal
src/common/: app-delegate.cpp  app-delegate.hpp  matrices.hpp  utils.cpp  utils.hpp  view-delegate.cpp  view-delegate.hpp
